redo "how it works" section on the company page, fix icon spacing

--- a/source/stylesheets/_basics.scss
+++ b/source/stylesheets/_basics.scss
@@ -119,6 +119,10 @@ b, strong {
   }
 }
 
+.icon {
+  margin-right: 5px;
+}
+
 main {
   text-align: center;
   flex: 1;
